2010-11-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-table-horizontal-line): Renamed from shr-table-line.
	(shr-table-vertical-line): New variable.
	(shr-insert-table): Use it.

2010-11-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-html.el (gnus-html-wash-images): Don't display images if
	gnus-inhibit-images is non-nil; register displayer for cid images.
	(gnus-html-display-image): Work for cid image.
	(gnus-html-insert-image): Allow arguments.
	(gnus-html-put-image): Inhibit read-only.
	(gnus-html-prefetch-images): Don't prefetch images if
	gnus-inhibit-images is non-nil.

2010-11-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-put-image): Break lines when inserting big pictures.

2010-11-17  Daniel Dehennin  <daniel.dehennin@baby-gnu.org>

	* mml2015.el (mml2015-epg-encrypt): Fix two cons with missing
	sender, thanks Katsumi Yamaoka.

2010-11-17  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-run-imap): Reverse the article list for each group
	rather than the whole list.

2010-11-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-image-displayer): Protect function against non-existent
	image source.

	* gnus-art.el (gnus-inhibit-images): New user option.
	(gnus-mime-display-single): Don't display image if it is non-nil.

	* mm-decode.el (mm-shr): Bind shr-inhibit-images to the value of
	gnus-inhibit-images.

	* shr.el (shr-image-displayer): New function.
	(shr-tag-img): Use it.

2010-11-16  Daniel Dehennin  <daniel.dehennin@baby-gnu.org>

	* mml2015.el (mml2015-epg-sign): Use From header.

2010-11-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-wash-images): Register a displayer.

	* gnus-util.el (gnus-find-text-property-region): Return markers.

	* shr.el (shr-tag-img): Put a displayer in the text property.

	* gnus-util.el (gnus-find-text-property-region): New utility function.

	* gnus-html.el (gnus-html-display-image): Make the alt optional.
	(gnus-html-show-images): Remove.
